--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <a href="assets/img/overview/O7.jpg" data-lightbox="overview"><img src="assets/img/overview/O7.jpg"></a>
             <a href="assets/img/overview/O8.jpg" data-lightbox="overview"><img src="assets/img/overview/O8.jpg"></a>
             <a href="assets/img/overview/O9.jpg" data-lightbox="overview"><img src="assets/img/overview/O9.jpg"></a>
-            <a href="assets/img/overview/O10.gif" data-lightbox="overview"><img src="assets/img/overview/O10.gif"></a>
+            <a href="assets/img/overview/OV10.gif" data-lightbox="overview"><img src="assets/img/overview/OV10.gif"></a>
             <a href="assets/img/overview/O11.jpg" data-lightbox="overview"><img src="assets/img/overview/O11.jpg"></a>
             <a href="assets/img/overview/O12.jpg" data-lightbox="overview"><img src="assets/img/overview/O12.jpg"></a>
             <a href="assets/img/overview/O13.jpg" data-lightbox="overview"><img src="assets/img/overview/O13.jpg"></a>
@@ -112,7 +112,7 @@
             <a href="assets/img/overview/O18.jpg" data-lightbox="overview"><img src="assets/img/overview/O18.jpg"></a>
             <a href="assets/img/overview/O19.jpg" data-lightbox="overview"><img src="assets/img/overview/O19.jpg"></a>
             <a href="assets/img/overview/O20.jpg" data-lightbox="overview"><img src="assets/img/overview/O20.jpg"></a>
-            <a href="assets/img/overview/O21.gif" data-lightbox="overview"><img src="assets/img/overview/O21.gif"></a>
+            <a href="assets/img/overview/OV21.gif" data-lightbox="overview"><img src="assets/img/overview/OV21.gif"></a>
             <a href="assets/img/overview/O22.jpg" data-lightbox="overview"><img src="assets/img/overview/O22.jpg"></a>
             <a href="assets/img/overview/O23.jpg" data-lightbox="overview"><img src="assets/img/overview/O23.jpg"></a>
             <a href="assets/img/overview/O24.jpg" data-lightbox="overview"><img src="assets/img/overview/O24.gif"></a>
@@ -133,7 +133,7 @@
           <img src="assets/img/overview/O7.jpg">
           <img src="assets/img/overview/O8.jpg">
           <img src="assets/img/overview/O9.jpg">
-          <img src="assets/img/overview/O10.gif">
+          <img src="assets/img/overview/OV10.gif">
           <img src="assets/img/overview/O11.jpg">
           <img src="assets/img/overview/O12.jpg">
           <img src="assets/img/overview/O13.jpg">
@@ -146,7 +146,7 @@
           <img src="assets/img/overview/O18.jpg">
           <img src="assets/img/overview/O19.jpg">
           <img src="assets/img/overview/O20.jpg">
-          <img src="assets/img/overview/O21.gif">
+          <img src="assets/img/overview/OV21.gif">
           <img src="assets/img/overview/O22.jpg">
           <img src="assets/img/overview/O23.jpg">
           <img src="assets/img/overview/O24.jpg">
