--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <a href="assets/img/overview/OV21.gif" data-lightbox="overview"><img src="assets/img/overview/OV21.gif"></a>
             <a href="assets/img/overview/O22.jpg" data-lightbox="overview"><img src="assets/img/overview/O22.jpg"></a>
             <a href="assets/img/overview/O23.jpg" data-lightbox="overview"><img src="assets/img/overview/O23.jpg"></a>
-            <a href="assets/img/overview/O24.jpg" data-lightbox="overview"><img src="assets/img/overview/O24.gif"></a>
+            <a href="assets/img/overview/O24.jpg" data-lightbox="overview"><img src="assets/img/overview/O24.jpg"></a>
             <a href="assets/img/overview/O25.jpg" data-lightbox="overview"><img src="assets/img/overview/O25.jpg"></a>
           </div>
         </div>
