--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
             <a href="assets/img/overview/O11.jpg" data-lightbox="overview"><img src="assets/img/overview/O11.jpg"></a>
             <a href="assets/img/overview/O12.jpg" data-lightbox="overview"><img src="assets/img/overview/O12.jpg"></a>
             <a href="assets/img/overview/O13.jpg" data-lightbox="overview"><img src="assets/img/overview/O13.jpg"></a>
+            <a href="assets/img/overview/O26.jpg" data-lightbox="overview"><img src="assets/img/overview/O26.jpg"></a>
+            <a href="assets/img/overview/O27.jpg" data-lightbox="overview"><img src="assets/img/overview/O27.jpg"></a>
           </div>
           <div class="row">
             <a href="assets/img/overview/O14.jpg" data-lightbox="overview"><img src="assets/img/overview/O14.jpg"></a>
@@ -117,6 +119,7 @@
             <a href="assets/img/overview/O23.jpg" data-lightbox="overview"><img src="assets/img/overview/O23.jpg"></a>
             <a href="assets/img/overview/O24.jpg" data-lightbox="overview"><img src="assets/img/overview/O24.jpg"></a>
             <a href="assets/img/overview/O25.jpg" data-lightbox="overview"><img src="assets/img/overview/O25.jpg"></a>
+            <a href="assets/img/overview/O28.jpg" data-lightbox="overview"><img src="assets/img/overview/O28.jpg"></a>
           </div>
         </div>
       </div>
@@ -137,6 +140,8 @@
           <img src="assets/img/overview/O11.jpg">
           <img src="assets/img/overview/O12.jpg">
           <img src="assets/img/overview/O13.jpg">
+          <img src="assets/img/overview/O26.jpg">
+          <img src="assets/img/overview/O27.jpg">
         </div>
         <div class="mobile-column">
           <img src="assets/img/overview/O14.jpg">
@@ -151,6 +156,7 @@
           <img src="assets/img/overview/O23.jpg">
           <img src="assets/img/overview/O24.jpg">
           <img src="assets/img/overview/O25.jpg">
+          <img src="assets/img/overview/O28.jpg">
         </div>
       </div>
 
