update commissioned page

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
       </div>
     </div>
     <!-- Commissioned Page -->
-    <div class="horizon scroll">
+    <div class="other scroll">
       <div class="commissioned">
         <div class="column">
           <div class="row">
