--- a/index.html
+++ b/index.html
@@ -638,9 +638,12 @@
             <p class="about-intro">Tory Rust is a Brooklyn-based photographer.
               <p class="about-words"> Raised in Fargo, North Dakota, she moved to NYC to attend The School of Visual Arts, where she graduated with a masters degree in fashion photography. Her work accurately represents her
                 obsession with saturated colors, high energy and junk food.
-                <p class="about-contact"> Based in NY tory@toryrust.com </p>
-          <p class="about-contact"> Represented by <a href="https://www.apostrophereps.com/photographers/tory-rust"> Apostrophe Reps </a> (212) 279-2252 peggy@apostrophereps.com</p>
-              </p>
+           <p class="about-contact"> Based in NY </p>
+          <p class="about-contact"> <a href="mailto:tory@toryrust.com">tory@toryrust.com</a> </p>
+          <p class="about-contact"> Represented by <a href="https://www.apostrophereps.com/photographers/tory-rust"> Apostrophe Reps </a> </p>
+          <p class="about-contact">(212) 279-2252 </p>
+          <p class="about-contact"><a href="mailto:peggy@apostrophereps.com"> peggy@apostrophereps.com </a> </p>
+            </p>
             </p>
           </div>
         </div>
@@ -657,8 +660,11 @@
           <p class="about-intro">Tory Rust is a Brooklyn-based photographer.
             <p class="about-words"> Raised in Fargo, North Dakota, she moved to NYC to attend The School of Visual Arts, where she graduated with a masters degree in fashion photography. Her work accurately represents her
               obsession with saturated colors, high energy and junk food.
-              <p class="about-contact"> Based in NY tory@toryrust.com </p>
-          <p class="about-contact"> Represented by <a href="https://www.apostrophereps.com/photographers/tory-rust"> Apostrophe Reps </a> (212) 279-2252 peggy@apostrophereps.com</p>
+          <p class="about-contact"> Based in NY </p>
+          <p class="about-contact"> <a href="mailto:tory@toryrust.com">tory@toryrust.com</a> </p>
+          <p class="about-contact"> Represented by <a href="https://www.apostrophereps.com/photographers/tory-rust"> Apostrophe Reps </a> </p>
+          <p class="about-contact">(212) 279-2252 </p>
+          <p class="about-contact"><a href="mailto:peggy@apostrophereps.com"> peggy@apostrophereps.com </a> </p>
             </p>
           </p>
         </div>
