--- a/index.html
+++ b/index.html
@@ -638,11 +638,8 @@
             <p class="about-intro">Tory Rust is a Brooklyn-based photographer.
               <p class="about-words"> Raised in Fargo, North Dakota, she moved to NYC to attend The School of Visual Arts, where she graduated with a masters degree in fashion photography. Her work accurately represents her
                 obsession with saturated colors, high energy and junk food.
-           <p class="about-contact"> Based in NY </p>
-          <p class="about-contact"> <a href="mailto:tory@toryrust.com">tory@toryrust.com</a> </p>
-          <p class="about-contact"> Represented by <a href="https://www.apostrophereps.com/photographers/tory-rust"> Apostrophe Reps </a> </p>
-          <p class="about-contact">(212) 279-2252 </p>
-          <p class="about-contact"><a href="mailto:peggy@apostrophereps.com"> peggy@apostrophereps.com </a> </p>
+          <p class="about-contact"> Based in NY <br> <a href="mailto:tory@toryrust.com">tory@toryrust.com</a> </p>
+          <p class="about-contact"> Represented by <a href="https://www.apostrophereps.com/photographers/tory-rust"> Apostrophe Reps </a> <br> (212) 279-2252 <br> <a href="mailto:peggy@apostrophereps.com"> peggy@apostrophereps.com </a> </p>
             </p>
             </p>
           </div>
@@ -660,11 +657,8 @@
           <p class="about-intro">Tory Rust is a Brooklyn-based photographer.
             <p class="about-words"> Raised in Fargo, North Dakota, she moved to NYC to attend The School of Visual Arts, where she graduated with a masters degree in fashion photography. Her work accurately represents her
               obsession with saturated colors, high energy and junk food.
-          <p class="about-contact"> Based in NY </p>
-          <p class="about-contact"> <a href="mailto:tory@toryrust.com">tory@toryrust.com</a> </p>
-          <p class="about-contact"> Represented by <a href="https://www.apostrophereps.com/photographers/tory-rust"> Apostrophe Reps </a> </p>
-          <p class="about-contact">(212) 279-2252 </p>
-          <p class="about-contact"><a href="mailto:peggy@apostrophereps.com"> peggy@apostrophereps.com </a> </p>
+          <p class="about-contact"> Based in NY <br> <a href="mailto:tory@toryrust.com">tory@toryrust.com</a> </p>
+          <p class="about-contact"> Represented by <a href="https://www.apostrophereps.com/photographers/tory-rust"> Apostrophe Reps </a> <br> (212) 279-2252 <br> <a href="mailto:peggy@apostrophereps.com"> peggy@apostrophereps.com </a> </p>
             </p>
           </p>
         </div>
